manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: melpominee-frontend
  namespace: melpominee
  labels:
    app: melpominee-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: melpominee-frontend
  template:
    metadata:
      labels:
        app: melpominee-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/imsilvz/melpominee-frontend:master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 250m
      imagePullSecrets:
      - name: github-pat
---
apiVersion: v1
kind: Service
metadata:
  name: melpominee-frontend
  namespace: melpominee
spec:
  selector:
    app: melpominee-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: melpominee-backend
  namespace: melpominee
  labels:
    app: melpominee-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: melpominee-backend
  template:
    metadata:
      labels:
        app: melpominee-backend
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: melpominee
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: melpominee-secrets
        - name: secret-volume
          projected:
            sources:
              - secret:
                  name: melpominee-discord
                  optional: true
              - secret:
                  name: melpominee-email
                  optional: true
              - secret:
                  name: melpominee-postgres
                  optional: true
              - secret:
                  name: melpominee-redis
                  optional: true
      containers:
      - name: backend
        image: ghcr.io/imsilvz/melpominee-backend:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 250m
        volumeMounts:
        - name: secret-volume
          mountPath: "/etc/melpominee/secrets"
          readOnly: true
      imagePullSecrets:
      - name: github-pat
---
apiVersion: v1
kind: Service
metadata:
  name: melpominee-backend
  namespace: melpominee
spec:
  selector:
    app: melpominee-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
