manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: melpominee-gateway
  namespace: melpominee
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: melpominee.app
      tls:
        mode: Terminate
        certificateRefs:
          - name: melpominee-cert
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: melpominee
  namespace: melpominee
spec:
  parentRefs:
    - name: melpominee-gateway
      sectionName: https
  hostnames:
    - melpominee.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: melpominee-backend
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: melpominee-frontend
          port: 80
