manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
  name: ingress-pgadmin4
  namespace: default
spec:
  rules:
  - host: pgadmin.melpominee.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin4
            port:
              number: 80
  ingressClassName: nginx
  tls:
  - hosts:
    - pgadmin.melpominee.app
    secretName: pgadmin-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cluster-issuer
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: ingress-melpominee
  namespace: melpominee
spec:
  rules:
  - host: melpominee.app
    http:
      paths:
      - path: /api/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: melpominee-backend
            port:
              number: 80
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: melpominee-frontend
            port:
              number: 80
  ingressClassName: nginx
  tls:
  - hosts:
    - melpominee.app
    secretName: melpominee-cert
